# bt-soccer-bas2

./: .gitignore  pyproject.toml  run_command.md
dudek/: config.py
dudek/data/: competition.py  team_bas.py
dudek/ml/data/: tdeed.py
dudek/ml/model/tdeed/eval/: legacy.py  two_heads.py
dudek/ml/model/tdeed/modules/: tdeed.py
dudek/ml/model/tdeed/training/: two_heads.py
dudek/scripts/: count_events.py  debug_video.py  extract.py  tdeed.py
dudek/utils/: competition_score.py  video.py
